--- a/docs/run/estimator-with-rest-api.mdx
+++ b/docs/run/estimator-with-rest-api.mdx
@@ -1,10 +1,10 @@
 ---
-title: Sampler Primitive with REST APIs
-description: How to use the Sampler primitive with Qiskit Runtime REST APIs.
+title: Estimator Primitive with REST APIs
+description: How to use the Estimator primitive with Qiskit Runtime REST APIs.
 
 ---
 
-# Sampler Primitive with REST APIs
+# Estimator Primitive with REST APIs
 
 The steps in this topic describe how to set up primitives with REST APIs, explore the options you can use to configure them, and invoke them in any program of your choice.
 
@@ -13,12 +13,12 @@ The steps in this topic describe how to set up primitives with REST APIs, explor
 </Admonition>
 
 
-<span id="start-sampler"></span>
-## Get started with Sampler
+<span id="start-estimator"></span>
+## Get started with Estimator
 
 ### 1. Initialize the account
 
-Because Qiskit Runtime `Sampler` is a managed service, you first need to initialize your account. You can then select the simulator or real system you want to use to calculate the expectation value.
+Because Qiskit Runtime `Estimator` is a managed service, you first need to initialize your account. You can then select the simulator or real system you want to use to calculate the expectation value.
 
 [Optional] Obtain a temporary Access token by supplying the API token from the IBM Quantum Platform. This is especially useful if you would like control over tokens, such as token invalidation. Alternatively, you can work directly with your IBM Quantum Platform API token.
 
@@ -49,7 +49,7 @@ print(backends_response.json()['devices'][:5],"...")
 
 ### 2. Create a QASM circuit
 
-You need at least one circuit as the input to the `Sampler` primitive.
+You need at least one circuit as the input to the `Estimator` primitive.
 
 
 * Define a QASM quantum circuit e.g. 
@@ -141,7 +141,6 @@ resp = requests.post(
     </TabItem>
 </Tabs>
 
-
 <Admonition type="note">
     Since there may be cases where it’s better to forego the use of AI-powered passes, we’ve developed a third option for the ai parameter that gives users the best of both worlds. Set the ai parameter to ai=auto, and this will enable the system to decide automatically whether to apply the standard Qiskit heuristic passes or the new AI-powered passes based on the particulars of your circuit.
 </Admonition>
@@ -162,7 +161,7 @@ Output
 OPENQASM 3.0; include "stdgates.inc"; bit[2] c; x $0; c[0] = measure $0; c[1] = measure $1;
 ```
 
-### 3. Run the Quantum Circuit using SamplerV2 API
+### 3. Run the Quantum Circuit using the EstimatorV2 API
 
 
 <Admonition type="note">
@@ -180,14 +179,18 @@ headers = {
     'x-qx-client-application': 'qiskit-version-2/0.39.2/'+'your_application' # specifying the application you might be running from. For an actual Integration project, this option is invaluable to know where jobs are coming from. At this time the "qiskit-version-2/0.39.2/" string is a necessary prefix.
     }
 job_input = {
-    'program_id': 'sampler',
+    'program_id': 'estimator',
     "backend": backend, 
     "hub": "ibm-q",
     "group": "open",
     "project": "main",
     "start_session": "False", # set to False if you just need to run a single job.  
     "params": {
-        "pubs": [[resulting_qasm],[resulting_qasm,None,500]], # primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
+        "pubs": [ #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
+            [resulting_qasm, # QASM circuit
+             {"IIZII": 1, "XIZZZ": 2.3}, # Observable
+             None # parameter values
+             ]], 
         "version": 2 # this defines the version of the Qiskit Runtime Primitive to use, c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
 }}
 
@@ -222,14 +225,12 @@ response_result= requests.get(url+'/'+job_id+'/results', headers=headers)
 
 res_dict=response_result.json()
 
-# Get results for the first PUB
-counts=res_dict['results'][0]['data']['c']['samples']
-
-print(counts[:20])
+estimator_result=res_dict['results']
+print(estimator_result)
 ```
 Output
 ```text
-['0x3', '0x0', '0x2', '0x1', '0x0', '0x3', '0x0', '0x3', '0x1', '0x2', '0x2', '0x0', '0x2', '0x0', '0x3', '0x3', '0x2', '0x0', '0x1', '0x0']
+[{'data': {'evs': 0.7428980350102542, 'stds': 0.029884014518789213, 'ensemble_standard_error': 0.03261147170624149}, 'metadata': {'shots': 10016, 'target_precision': 0.01, 'circuit_metadata': {}, 'resilience': {}, 'num_randomizations': 32}}]
 ```
 
 ### 5. Working with Runtime Options
@@ -239,9 +240,61 @@ Error mitigation techniques allow users to mitigate circuit errors by modeling t
 The error mitigation techniques built in to primitives are advanced resilience options. To specify these options, use the resilience_level option when submitting your job.
 Sampler V2 does not support specifying resilience levels. However, you can turn on or off individual error mitigation / suppression methods. 
 
-You will see examples of two such error mitigation / suppression techniques when used with the Sampler Primitive. The examples given below demonstrate the default options for error mitigation / suppression techniques but more options for [Dynamical decoupling](https://github.com/Qiskit/qiskit-ibm-runtime/blob/main/qiskit_ibm_runtime/options/dynamical_decoupling_options.py) and [Twirling](https://github.com/Qiskit/qiskit-ibm-runtime/blob/main/qiskit_ibm_runtime/options/twirling_options.py) can be further explored. 
+You will see examples of three such error mitigation / suppression techniques when used with the Estimator Primitive. The examples given below demonstrate the default options for error mitigation / suppression techniques but more options for [Dynamical decoupling](https://github.com/Qiskit/qiskit-ibm-runtime/blob/main/qiskit_ibm_runtime/options/dynamical_decoupling_options.py), [Twirling](https://github.com/Qiskit/qiskit-ibm-runtime/blob/main/qiskit_ibm_runtime/options/twirling_options.py) and [TREX + ZNE](https://github.com/Qiskit/qiskit-ibm-runtime/blob/main/qiskit_ibm_runtime/options/resilience_options.py) can be further explored. 
 
 <Tabs>
+
+   <TabItem value="TREX + ZNE" label="TREX + ZNE">
+
+  ```python
+import requests
+
+url = 'https://api.quantum-computing.ibm.com/runtime/jobs'
+headers = {
+    'Content-Type': 'application/json',
+    'x-access-token':auth_id,
+    'x-qx-client-application': 'qiskit-version-2/0.39.2/'+'your_application' # specifying the application you might be running from. For an actual Integration project, this option is invaluable to know where jobs are coming from. At this time the "qiskit-version-2/0.39.2/" string is a necessary prefix.
+    }
+job_input = {
+    'program_id': 'estimator',
+    "backend": backend, 
+    "hub": "ibm-q",
+    "group": "open",
+    "project": "main",
+    "start_session": "False", # set to False if you just need to run a single job.  
+    "params": {
+        "pubs": [ #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
+            [resulting_qasm, # QASM circuit
+             {"IIZII": 1, "XIZZZ": 2.3}, # Observable
+             None # parameter values
+             ]],
+        "version": 2, # this defines the version of the Qiskit Runtime Primitive to use, c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
+        "options": {
+            "resilience": {
+              "measure_mitigation": True,
+              "zne_mitigation": True,
+              "zne": {
+                  "extrapolator":["exponential", "linear"],
+                  "noise_factors":[1, 3, 5],
+              },
+              #"pec_mitigation": False,
+              #"pec": None,
+              #"layer_noise_learning":None,
+          },
+        },
+    }
+}
+
+response = requests.post(url, headers=headers, json=job_input)
+
+if response.status_code == 200:
+    job_id = response.json().get('id')
+    print("Job created:",response.text)
+else:
+    print(f"Error: {response.status_code}")
+```
+
+  </TabItem>
 
   <TabItem value="Dynamical Decoupling" label="Dynamical Decoupling">
 
@@ -255,14 +308,18 @@ headers = {
     'x-qx-client-application': 'qiskit-version-2/0.39.2/'+'your_application' # specifying the application you might be running from. For an actual Integration project, this option is invaluable to know where jobs are coming from. At this time the "qiskit-version-2/0.39.2/" string is a necessary prefix.
     }
 job_input = {
-    'program_id': 'sampler',
+    'program_id': 'estimator',
     "backend": backend, 
     "hub": "ibm-q",
     "group": "open",
     "project": "main",
     "start_session": "False", # set to False if you just need to run a single job.  
     "params": {
-        "pubs": [[resulting_qasm]], # primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
+        "pubs": [ #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
+            [resulting_qasm, # QASM circuit
+             {"IIZII": 1, "XIZZZ": 2.3}, # Observable
+             None # parameter values
+             ]],
         "version": 2, # this defines the version of the Qiskit Runtime Primitive to use, c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
         "options": {
             "dynamical_decoupling": { 
@@ -298,14 +355,18 @@ headers = {
     'x-qx-client-application': 'qiskit-version-2/0.39.2/'+'your_application' # specifying the application you might be running from. For an actual Integration project, this option is invaluable to know where jobs are coming from. At this time the "qiskit-version-2/0.39.2/" string is a necessary prefix.
     }
 job_input = {
-    'program_id': 'sampler',
+    'program_id': 'estimator',
     "backend": backend, 
     "hub": "ibm-q",
     "group": "open",
     "project": "main",
     "start_session": "False", # set to False if you just need to run a single job.  
     "params": {
-        "pubs": [[resulting_qasm]], # primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
+        "pubs": [ #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
+            [resulting_qasm, # QASM circuit
+             {"IIZII": 1, "XIZZZ": 2.3}, # Observable
+             None # parameter values
+             ]],
         "version": 2, # this defines the version of the Qiskit Runtime Primitive to use, c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
         "options": {
             "twirling": { 
@@ -389,25 +450,26 @@ response = requests.request("POST", sessionsUrl, data=payload,  headers=headersL
 sessionId = response.json()['id']
 ```
 
-One or more `Sampler` jobs can be submitted to the same `session` by specifying the session ID. 
+One or more `Estimator` jobs can be submitted to the same `session` by specifying the session ID. 
 
 
 <Admonition type="note">
     The `<parameter values>` in a `PUB` can either be a single parameter or a list of parameters. It also supports `numpy` broadcasting. 
 </Admonition>
 
+
 <Tabs>
-  <TabItem value="1 circuit, no parameters" label="1 circuit, no parameters">
+  <TabItem value="1 circuit, 4 observables" label="1 circuit, 4 observables">
     ```python
     job_input = {
-    'program_id': 'sampler',
+    'program_id': 'estimator',
     "backend": backend, 
     "hub": "ibm-q",
     "group": "open",
     "project": "main",
     "session_id": sessionId, # This specifies the previously created Session 
     "params": {
-        "pubs": [[resulting_qasm]], #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
+        "pubs": [[resulting_qasm, [obs1, obs2, obs3, obs4]]], #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
         "version": 2, #this defines the version of the Qiskit Runtime Primitive to use, c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
         "options":{
                 "transpilation":{"optimization_level": 1},
@@ -420,18 +482,18 @@ One or more `Sampler` jobs can be submitted to the same `session` by specifying 
 ```
   </TabItem>
 
-  <TabItem value="1 circuit, 3 parameter sets" label="1 circuit, 3 parameter sets">
+  <TabItem value="1 circuit, 4 observables, 2 parameter sets" label="1 circuit, 4 observables, 2 parameter sets">
   
     ```python
     job_input = {
-    'program_id': 'sampler',
+    'program_id': 'estimator',
     "backend": backend, 
     "hub": "ibm-q",
     "group": "open",
     "project": "main",
     "session_id": sessionId, # This specifies the previously created Session 
     "params": {
-        "pubs": [[resulting_qasm, [vals1, vals2, vals3]]], #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
+        "pubs": [[resulting_qasm, [[obs1], [obs2], [obs3], [obs4]], [[vals1], [vals2]]]], #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
         "version": 2, #this defines the version of the Qiskit Runtime Primitive to use, c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
         "options":{
                 "transpilation":{"optimization_level": 1},
@@ -443,18 +505,18 @@ One or more `Sampler` jobs can be submitted to the same `session` by specifying 
 ```
   </TabItem>
 
-  <TabItem value="2 circuits, 1 parameter set" label="2 circuits, 1 parameter set">
+  <TabItem value="2 circuits, 2 observables" label="2 circuits, 2 observables">
 
   ```python
     job_input = {
-    'program_id': 'sampler',
+    'program_id': 'estimator',
     "backend": backend, 
     "hub": "ibm-q",
     "group": "open",
     "project": "main",
     "session_id": sessionId, # This specifies the previously created Session 
     "params": {
-        "pubs": [[resulting_qasm, [val1]],[resulting_qasm,None,100]], #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
+        "pubs": [[resulting_qasm, obs1],[resulting_qasm, obs2]], #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
         "version": 2, #this defines the version of the Qiskit Runtime Primitive to use, c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
         "options":{
                 "transpilation":{"optimization_level": 1},
