--- a/docs/run/error-mitigation-explanation.ipynb
+++ b/docs/run/error-mitigation-explanation.ipynb
@@ -294,6 +294,8 @@
   }
  ],
  "metadata": {
+  "title": "Error mitigation technique explanations",
+  "description": "Explanation of error mitigation techniques available through Qiskit Runtime",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
