--- a/docs/run/rest-api-initialize-account.mdx
+++ b/docs/run/rest-api-initialize-account.mdx
@@ -4,13 +4,17 @@ description: How to initialize Qiskit Runtime Service using REST APIs.
 
 ---
 
-# Initialize account using REST API
+# Initialize account using REST APIs
 
-Because Qiskit Runtime `Sampler` and `Estimator` are managed services, you first need to initialize your account. You can then select the simulator or real system you want to use to calculate the expectation value.
+Qiskit Runtime `Sampler` and `Estimator` are managed services which require you to initialize your account. After initialization, you can select the IBM Quantum Compute resource of your choice to run your calculations on. 
 
 ### Setup temporary access token 
 
 Obtain a temporary Access token by supplying the API token from the IBM Quantum Platform. This is especially useful if you would like control over tokens, such as token invalidation. Alternatively, you can work directly with your IBM Quantum Platform API token.
+
+<Admonition type="note">
+    The code snippets below assume that the API Token from the IBM Quantum Platform is stored in a filed named `token`.
+</Admonition>
 
 ```python
 import requests
@@ -23,6 +27,8 @@ input={'apiToken': token}
 auth_response = requests.post(url, json=input)
 auth_id=auth_response.json()['id']
 ```
+
+### View available backends
 
 Let's view your available backends
 
@@ -39,6 +45,8 @@ print(backends_response.json()['devices'][:5],"...")
 ### Transpile and execute circuits
 
 You can then transpile circuits using the [Qiskit transpiler service](rest-api-transpilation) and run them using either the [Sampler](rest-api-sampler) Primitive or the [Estimator](rest-api-estimator) Primitive.   
+
+After your experiments are complete, you can proceed to invalidate your token followed by testing it's invalidation.
 
 
 ### Invalidate Token and test Token Invalidation
@@ -70,3 +78,13 @@ Output
 ```text
 invalid credentials. Access token should be successfully invalidated.
 ```
+
+## Next steps
+
+<Admonition type="tip" title="Recommendations">
+    - Review detailed [Sampler](rest-api-sampler) and [Estimator](rest-api-estimator) primitives examples.
+    - Learn how to transpile circuits using the [Cloud Transpiler API](rest-api-transpilation).
+    - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
+    - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
+    - Learn how to transpile locally in the [Transpile](../transpile/) section.
+</Admonition>
