--- a/docs/run/rest-api-sampler.mdx
+++ b/docs/run/rest-api-sampler.mdx
@@ -18,7 +18,9 @@ The steps in this topic describe how to set up primitives with REST APIs, explor
 
 ### 1. Initialize the account
 
-Because Qiskit Runtime `Sampler` is a managed service, you first need to initialize your account. You can then select the simulator or real system you want to use to calculate the expectation value.
+Because Qiskit Runtime `Sampler` is a managed service, you first need to initialize your account. You can then select the simulator or real system you want to use to calculate the expectation value. You can then select the IBM Quantum Compute resource of your choice to run your calculations on. 
+
+Details on how to initialize your account, view available backends and invalidate tokens can be found in this [topic](rest-api-initialize-account).
 
 
 ### 2. Create a QASM circuit
@@ -44,6 +46,16 @@ c[1] = measure q[1];
 
 ### 3. Invoke the Qiskit Transpiler Service
 
+[Transpilation is necessary](https://docs.quantum.ibm.com/announcements/product-updates/2024-02-14-qiskit-runtime-primitives-update) prior to submitting a circuit to IBM Quantum backends. The circuit provided will need to be mapped to instructions fitting to the hardware basis instructions of the QPU, which is a process known as transpilation.
+
+* You can either transpile [locally via Qiskit](https://docs.quantum.ibm.com/transpile/defaults-and-configuration-options) before generating the QASM string, or:
+
+* Use the [Cloud Transpiler API](https://cloud-transpiler.quantum.ibm.com/docs)
+
+Detailed instructions on how to use the Cloud Transpiler API can be found in this [topic](rest-api-transpilation).
+
+The code snippets given below assume that the `qasm_string` has been transpiled to a new string `resulting_qasm` as per this [topic](rest-api-transpilation).
+
 
 ### 4. Run the Quantum Circuit using SamplerV2 API
 
@@ -65,9 +77,9 @@ headers = {
 job_input = {
     'program_id': 'sampler',
     "backend": backend, 
-    "hub": "ibm-q",
-    "group": "open",
-    "project": "main",
+    "hub": "hub1",
+    "group": "group1",
+    "project": "project1",
     "start_session": "False", # set to False if you just need to run a single job.  
     "params": {
         "pubs": [[resulting_qasm],[resulting_qasm,None,500]], # primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
@@ -86,7 +98,7 @@ else:
 
 ### 5. Check Job Status and Get Results
 
-Next, pass the job ID to the API:
+Next, pass the `job_id` to the API:
 
 ```python
 response_status_singlejob= requests.get(url+'/'+job_id, headers=headers)
@@ -140,9 +152,9 @@ headers = {
 job_input = {
     'program_id': 'sampler',
     "backend": backend, 
-    "hub": "ibm-q",
-    "group": "open",
-    "project": "main",
+    "hub": "hub1",
+    "group": "group1",
+    "project": "project1",
     "start_session": "False", # set to False if you just need to run a single job.  
     "params": {
         "pubs": [[resulting_qasm]], # primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
@@ -183,9 +195,9 @@ headers = {
 job_input = {
     'program_id': 'sampler',
     "backend": backend, 
-    "hub": "ibm-q",
-    "group": "open",
-    "project": "main",
+    "hub": "hub1",
+    "group": "group1",
+    "project": "project1",
     "start_session": "False", # set to False if you just need to run a single job.  
     "params": {
         "pubs": [[resulting_qasm]], # primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
@@ -215,9 +227,11 @@ else:
   </TabItem>
 </Tabs>
 
-### 7. Submitting Jobs in a Session
+### 7. Submitting jobs in a session/batch
 
-One or more `Sampler` jobs can be submitted to the same `session` by specifying the session ID. 
+There are several ways to run workloads, depending on your needs: job mode, session mode and batch mode. Learn how to work with session mode and batch mode by following this [topic](rest-api-execution-modes).
+
+Once a session is setup: one or more `Sampler` jobs can be submitted to the same session by specifying the session ID. 
 
 
 <Admonition type="note">
@@ -230,9 +244,9 @@ One or more `Sampler` jobs can be submitted to the same `session` by specifying 
     job_input = {
     'program_id': 'sampler',
     "backend": backend, 
-    "hub": "ibm-q",
-    "group": "open",
-    "project": "main",
+    "hub": "hub1",
+    "group": "group1",
+    "project": "project1",
     "session_id": sessionId, # This specifies the previously created Session 
     "params": {
         "pubs": [[resulting_qasm]], #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
@@ -254,9 +268,9 @@ One or more `Sampler` jobs can be submitted to the same `session` by specifying 
     job_input = {
     'program_id': 'sampler',
     "backend": backend, 
-    "hub": "ibm-q",
-    "group": "open",
-    "project": "main",
+    "hub": "hub1",
+    "group": "group1",
+    "project": "project1",
     "session_id": sessionId, # This specifies the previously created Session 
     "params": {
         "pubs": [[resulting_qasm, [vals1, vals2, vals3]]], #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
@@ -277,9 +291,9 @@ One or more `Sampler` jobs can be submitted to the same `session` by specifying 
     job_input = {
     'program_id': 'sampler',
     "backend": backend, 
-    "hub": "ibm-q",
-    "group": "open",
-    "project": "main",
+    "hub": "hub1",
+    "group": "group1",
+    "project": "project1",
     "session_id": sessionId, # This specifies the previously created Session 
     "params": {
         "pubs": [[resulting_qasm, [val1]],[resulting_qasm,None,100]], #primitive unified blocs (PUBs) containing one circuit each. c.f. https://docs.quantum.ibm.com/api/migration-guides/v2-primitives
@@ -298,10 +312,10 @@ One or more `Sampler` jobs can be submitted to the same `session` by specifying 
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Learn how to [test locally](../verify/local-testing-mode) before running on quantum computers.
-    - Review detailed [primitives examples.](primitives-examples)
+    - Learn how to [initialize your account](rest-api-initialize-account) with REST APIs.
+    - Review detailed [Sampler](rest-api-sampler) and [Estimator](rest-api-estimator) primitives examples.
+    - Learn how to transpile circuits using the [Cloud Transpiler API](rest-api-transpilation).
     - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
     - Learn how to transpile locally in the [Transpile](../transpile/) section.
-    - Try the [Submit pre-transpiled circuits](https://learning.quantum.ibm.com/tutorial/submitting-user-transpiled-circuits-using-primitives) tutorial.
 </Admonition>
