--- a/docs/run/error-mitigation-explanation.ipynb
+++ b/docs/run/error-mitigation-explanation.ipynb
@@ -43,13 +43,13 @@
     "\n",
     "Quantum circuits are executed on IBM hardware as sequences of microwave pulses that need to be scheduled and run at precise time intervals.\n",
     "Unfortunately, unwanted interactions between qubits can lead to coherent errors on idling qubits. Dynamical decoupling works by inserting pulse sequences on idling qubits to approximately cancel out the effect of these errors. Each inserted pulse sequence amounts to an identity operation, but the physical presence of the pulses has the effect of suppressing errors.\n",
-    "There are many possible cohoice of pulse sequences, and which sequence is better for each particular case remains an [active area of research](https://journals.aps.org/prapplied/abstract/10.1103/PhysRevApplied.20.064027).\n",
+    "There are many possible choices of pulse sequences, and which sequence is better for each particular case remains an [active area of research](https://journals.aps.org/prapplied/abstract/10.1103/PhysRevApplied.20.064027).\n",
     "\n",
     "The diagram below depicts dynamical decoupling with an XX pulse sequence. The abstract circuit on the left is mapped onto a microwave pulse schedule on the top right. The bottom right depicts the same schedule, but with a sequence of two X pulses inserted during an idle period of the first qubit.\n",
     "\n",
     "![Depiction of dynamical decoupling](/images/run/error-mitigation-explanation/dd.jpg)\n",
     "\n",
-    "The Qiskit Runtime options for dynamical decoupling are described [here](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions). Notably, the `sequence_type` option can be used to pick from several different pulse sequences.\n",
+    "Dynamical decoupling can be enabled by setting `enable` to `True` in the [dynamical decoupling options](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions). The `sequence_type` option can be used to pick from several different pulse sequences. The default sequence type is `\"XX\"`.\n",
     "\n",
     "The following code cell shows how to enable dynamical decoupling for the estimator and choose a dynamical decoupling sequence."
    ]
@@ -97,13 +97,12 @@
     "\n",
     "![Depiction of gate twirls](/images/run/error-mitigation-explanation/gate_twirls.png)\n",
     "\n",
-    "The Qiskit Runtime options for Pauli twirling are described [here](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions). The following options are notable:\n",
+    "Pauli twirling can be enabled by setting `enable_gates` to `True` in the [twirling options](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions). Other notable options include:\n",
     "\n",
-    "- `enable_gates`: Set this to `True` to enable Pauli twirling of two-qubit gates.\n",
     "- `num_randomizations`: The number of circuit instances to draw from the ensemble of twirled circuits.\n",
     "- `shots_per_randomization`: The number of shots to sample from each circuit instance.\n",
     "\n",
-    "The following code cell shows how to enable Pauli twirling and set these options for the estimator."
+    "The following code cell shows how to enable Pauli twirling and set these options for the estimator. None of these options are required to be set explicitly."
    ]
   },
   {
@@ -140,9 +139,9 @@
     "\n",
     "In the presence of readout error, measurement twirling has the effect of diagonalizing the readout-error transfer matrix, making it easy to invert. Estimating the readout-error transfer matrix requires executing additional calibration circuits, which introduces a small overhead.\n",
     "\n",
-    "TREX can be enabled by setting `measure_mitigation` to `True` in version 2 of the [Qiskit Runtime resilience options](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2). Options for measurement twirling are described [here](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.MeasureNoiseLearningOptions). As in gate twirling, you can set the number of circuit randomizations and the number of shots per randomization.\n",
+    "TREX can be enabled by setting `measure_mitigation` to `True` in version 2 of the [Qiskit Runtime resilience options](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2). Options for measurement twirling are described [here](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.MeasureNoiseLearningOptions). As with gate twirling, you can set the number of circuit randomizations and the number of shots per randomization.\n",
     "\n",
-    "The following code cell shows how to enable TREX and set these options for the estimator."
+    "The following code cell shows how to enable TREX and set these options for the estimator. None of these options are required to be set explicitly."
    ]
   },
   {
@@ -190,7 +189,7 @@
     "- `noise_factors`: The noise factors to use for noise amplification.\n",
     "- `extrapolator`: The functional form to use for the extrapolation.\n",
     "\n",
-    "The following code cell shows how enable ZNE and set these options for the estimator."
+    "The following code cell shows how enable ZNE and set these options for the estimator. None of these options are required to be set explicitly."
    ]
   },
   {
