--- a/docs/start/setup-channel.mdx
+++ b/docs/start/setup-channel.mdx
@@ -66,8 +66,13 @@ Available plans:
     from qiskit_ibm_runtime import QiskitRuntimeService
 
     # Save an IBM Quantum account and set it as your default account.
-    # Use `overwrite=True` if you're updating your token.
-    QiskitRuntimeService.save_account(channel="ibm_quantum", token="<MY_IBM_QUANTUM_TOKEN>", set_as_default=True, overwrite=True)
+    QiskitRuntimeService.save_account(
+        channel="ibm_quantum",
+        token="<MY_IBM_QUANTUM_TOKEN>",
+        set_as_default=True,
+        # Use `overwrite=True` if you're updating your token.
+        overwrite=True,
+    )
 
     # Load saved credentials
     service = QiskitRuntimeService()
